articles and authors

--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,1 +1,12 @@
-<p>news works!</p>
+<div class="container newsApp">
+    <div>        
+      <p>{{totalAuthors}}</p>
+       <p>Autores</p>
+        <a href="">ver los autores</a>
+    </div>
+    <div>        
+        <p>{{totalArticles}} +</p>
+        <p>Artículos</p>
+        <a href="">ver las noticias</a>
+    </div>
+</div>
