--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -8,7 +8,7 @@
   .search-input{
     width: 100%;
     padding: 10px;
-    border: 1px solid gray;
+    border: 1px solid #e0e0e0;
     border-right: none;
     outline: none;
     font-size: 20px;
@@ -21,10 +21,10 @@
     width: 40px;
     outline: none;
     cursor: pointer;
-    border: 1px solid gray;
+    border: 1px solid #e0e0e0;
     border-left: none;
     background: none;
     font-size: 20px;
-    border-left: 1px solid gray; 
+    border: 1px solid #e0e0e0;
   }
   
