load the news table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <app-header></app-header>
-    <app-searchbar></app-searchbar>
-    <app-news></app-news>
+    <app-header></app-header>   
 </div>
+
+<router-outlet></router-outlet>
