--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -2,11 +2,11 @@
     <div>        
       <p>{{totalAuthors}}</p>
        <p>Autores</p>
-        <a href="">ver los autores</a>
+        <a href="/articles">ver los autores</a>
     </div>
     <div>        
-        <p>{{totalArticles}} +</p>
+        <p>{{totalArticles}}</p>
         <p>Artículos</p>
-        <a href="">ver las noticias</a>
+        <a href="/articles">ver las noticias</a>
     </div>
 </div>
