--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -26,7 +26,8 @@
        } 
        &:first-child{
         font-size: 45px;
-        font-weight: 100;   
+        font-weight: 100; 
+        margin: 0; 
        }
        
     }
