--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -12,7 +12,8 @@
         <img [src]="data.urlToImage" alt="">
         <label>{{data.title}}</label>
         <p> <strong>{{data.author}}</strong></p>
-        <p>{{data.description}}</p>
+        <p>{{data.description}} <strong><a href="{{data.url}}">READ... </a></strong></p>
+        <p></p>
     </div>   
   </div>
  
