--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
 body {
   font-family: "Oswald", sans-serif;
-  background-color: #f9f9f9;
-}
+  font-family: "Tinos", serif;
+}/*# sourceMappingURL=app.component.css.map */
