--- a/src/app/articles/articles.component.css
+++ b/src/app/articles/articles.component.css
@@ -1,111 +1,60 @@
 body {
   background-color: #F4F7FA;
 }
+h1 {
+  font-weight: 300;
+}
 
 section {
   max-width: 1024px;
   margin: 0 auto;
+  color: black;
 }
-
-table {
+section .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+section div {
+  margin: 1%;
+}
+section img {
   width: 100%;
-  border-collapse: collapse;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: transparent;
 }
-
-.table--striped tr:nth-of-type(odd) {
-  background-color: #F9F9F9;
+section label {
+  font-weight: 700;
+  font-size: 1.5em;
+  line-height: 1em;
+  margin: 2% 0;
 }
-
-.table--hover tbody tr:hover {
-  cursor: pointer;
-  background-color: #F5F5F5;
+section p {
+  margin: 0.1%;
+  color: gray;
 }
-
-.table--bordered tr {
-  border-bottom: 2px solid #cfd2d5;
-}
-
-th {
-  font-weight: bold;
-  border-bottom: 2px solid #CFD2D5;
-}
-
-td, th {
-  font-size: 14px;
-  padding: 12px;
-  text-align: left;
-  text-overflow: ellipsis;
-  color: #a4adc2;
-  line-height: 3em;
-}
-
-th {
-  font-weight: 900;
-  color: #A4ADC2;
-}
-
-td {
-  font-weight: 400;
-  color: #697F8E;
-  border-top: 1px solid #CFD2D5;
-}
-
-tbody tr:first-child {
-  border-top: 0;
+section p:nth-child(2n) {
+  color: black !important;
 }
 
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
-  table, thead, tbody, th, td, tr {
-    display: block;
+  section {
+    width: 100%;
   }
-
-  thead tr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-  }
-
-  tr {
-    border: 1px solid #CFD2D5;
-  }
-
-  td {
-    border: none;
-    border-bottom: 1px solid #CFD2D5;
-    position: relative;
-    padding-left: 50%;
-  }
-
-  td, td:before, th {
-    line-height: 1.5em;
-  }
-
-  td:before {
-    position: absolute;
-    top: 22%;
-    left: 12px;
-    width: 45%;
-    padding-right: 10px;
-    white-space: nowrap;
-    font-weight: 900;
-    color: #A4ADC2;
-  }
-
-  td:before {
-    content: attr(data-label);
+  section .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 auto;
   }
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  body {
-    padding: 0;
-    margin: 0;
-    width: 320px;
+  .container {
+    display: grid;
+    grid-template-columns: 1fr !important;
+    margin: 0 auto;
   }
 }
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-  body {
-    width: 495px;
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr !important;
+    margin: 0 auto;
   }
 }/*# sourceMappingURL=articles.component.css.map */
