--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,6 @@
 <header>
-    <h1>Breaking news.</h1>
+    <div class="container">
+        <label>Breaking</label>
+        <label>news.</label>
+    </div>   
 </header>
