--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,11 +1,25 @@
-h1{
+*{
     font-family: 'Oswald', sans-serif;  
-    display: flex;
-    justify-content: center;
-    text-transform: capitalize;
-    width: 100%;
-    border: 1px solid gray;
-    color: gray;
-    font-size: 3em;
-    padding: 4%;
 }
+.container{
+    width: 100%;
+    text-transform: uppercase;    
+    color: #1b1b1b;
+    height: fit-content;
+    display: inline-table;
+    label{   
+        padding: 0;
+        margin: 0;
+        border: 0;
+        font-size: 3em;
+        width: 30%; 
+        display: block;
+        
+        &:nth-child(2n){
+            color: #e60023;
+            font-weight: 600;
+        }
+    }
+}
+
+
