--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
+<app-preheader></app-preheader>
 <div class="container">
     <app-header></app-header>   
 </div>
-
+<app-news> </app-news>
 <router-outlet></router-outlet>
