--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -10,6 +10,7 @@
   height: -moz-fit-content;
   height: fit-content;
   display: inline-table;
+  padding: 3% 2% 0.5% 2%;
 }
 .container label {
   padding: 0;
