--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,6 +7,7 @@
     color: #1b1b1b;
     height: fit-content;
     display: inline-table;
+    padding: 3% 2% 0.5% 2%;
     label{   
         padding: 0;
         margin: 0;
