--- a/src/app/components/preheader/preheader.component.css
+++ b/src/app/components/preheader/preheader.component.css
@@ -30,6 +30,7 @@
 }
 .preheader div:nth-child(2n) p {
   display: inline;
+  margin-bottom: 0;
 }
 .preheader div:nth-child(2n) p:nth-child(2n) {
   color: #e60023;
