--- a/src/app/components/preheader/preheader.component.html
+++ b/src/app/components/preheader/preheader.component.html
@@ -16,11 +16,11 @@
         <div>home</div>
         <div>            
             <p>articles</p>
-            <p></p>
+            <p>&nbsp;{{allnewsArticle}}</p>
         </div>
         <div>
             <p>authors</p>
-             <p></p>
+             <p>&nbsp;{{AllNewsAuthors}}</p>
         </div>
     </div>
     <div>EN</div>
