--- a/src/app/components/preheader/preheader.component.scss
+++ b/src/app/components/preheader/preheader.component.scss
@@ -29,6 +29,7 @@
                display: inline-flex;
                p{
                    display: inline;
+                   margin-bottom: 0;
                    &:nth-child(2n){
                      color: #e60023;;
                    }
