--- a/src/app/components/preheader/preheader.component.html
+++ b/src/app/components/preheader/preheader.component.html
@@ -13,14 +13,22 @@
           </svg>
     </div>
     <div class="slogan">
-        <div>home</div>
-        <div>            
+        <div>
+          <p><a href="/">home</a></p>
+        </div>
+        <div>  
+          <a href="/articles">         
             <p>articles</p>
             <p>&nbsp;{{allnewsArticle}}</p>
+          </a>
         </div>
         <div>
-            <p>authors</p>
-             <p>&nbsp;{{AllNewsAuthors}}</p>
+          <a href="/articles">
+              <p>authors</p>
+              <p>
+                &nbsp;{{AllNewsAuthors}}
+              </p>
+            </a>
         </div>
     </div>
     <div>EN</div>
