--- a/src/app/components/preheader/preheader.component.html
+++ b/src/app/components/preheader/preheader.component.html
@@ -19,14 +19,14 @@
         <div>  
           <a href="/articles">         
             <p>articles</p>
-            <p>&nbsp;{{allnewsArticle}}</p>
+            <p>{{allnewsArticle}}</p>
           </a>
         </div>
         <div>
           <a href="/articles">
               <p>authors</p>
               <p>
-                &nbsp;{{AllNewsAuthors}}
+                {{AllNewsAuthors}}
               </p>
             </a>
         </div>
