--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,8 @@
 body {
   font-family: "Oswald", sans-serif;
   font-family: "Tinos", serif;
+}
+
+app-news:nth-child(2n) {
+  display: none !important;
 }/*# sourceMappingURL=app.component.css.map */
