--- a/src/app/articles/articles.component.css
+++ b/src/app/articles/articles.component.css
@@ -45,13 +45,42 @@ section p a {
   color: #e60023;
 }
 
+.search-box {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #e0e0e0;
+  border-right: none;
+  outline: none;
+  font-size: 20px;
+  background: none;
+}
+
+.search-button {
+  text-align: center;
+  height: 51px;
+  width: 40px;
+  outline: none;
+  cursor: pointer;
+  border: 1px solid #e0e0e0;
+  border-left: none;
+  background: none;
+  font-size: 20px;
+  border: 1px solid #e0e0e0;
+}
+
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
   section {
     width: 100%;
   }
   section .container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr !important;
     margin: 0 auto;
   }
 }
