--- a/src/app/components/preheader/preheader.component.scss
+++ b/src/app/components/preheader/preheader.component.scss
@@ -64,3 +64,20 @@
         }
     }
 }
+
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+        .preheader{
+            div{
+                width: 138px;
+                &:nth-child(3n){
+                    display: none;
+                }
+            }            
+        }
+}
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+
+}
